<?xml version="1.0" encoding="utf-8"?><menu xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:android="http://schemas.android.com/apk/res/android">    <item        android:id="@+id/action_camera"        android:title="@string/title_camera"        android:icon="@drawable/ic_outline_camera_alt_24"        app:showAsAction="always" />    <item        android:id="@+id/action_about"        android:title="@string/title_search"        android:icon="@drawable/ic_sharp_search_24"        app:showAsAction="ifRoom" />    <item        android:id="@+id/action_new_group"        android:title="@string/title_new_group" />    <item        android:id="@+id/action_new_broadcast"        android:title="@string/title_new_broadcast" />    <item        android:id="@+id/action_linked_devices"        android:title="@string/title_linked_devices" />    <item        android:id="@+id/action_starred_massages"        android:title="@string/title_starred_massages" />    <item        android:id="@+id/action_settings"        android:title="@string/title_settings" /></menu>