<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chats">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.dicoding.aplikasichat.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_updates"
        android:name="com.dicoding.aplikasichat.ui.updates.UpdatesFragment"
        android:label="@string/title_updates"
        tools:layout="@layout/fragment_updates" />

    <fragment
        android:id="@+id/navigation_communities"
        android:name="com.dicoding.aplikasichat.ui.communities.CommunitiesFragment"
        android:label="@string/title_communities"
        tools:layout="@layout/fragment_communities" />

    <fragment
        android:id="@+id/navigation_calls"
        android:name="com.dicoding.aplikasichat.ui.call.CallsFragment"
        android:label="@string/title_calls"
        tools:layout="@layout/fragment_call" />
</navigation>